--- a/index.html
+++ b/index.html
@@ -1,19 +1,26 @@
 <!doctype html>
 <html>
-
 <head>
   <meta charset="utf-8">
-  <title>Hello World!</title>
+  <alert>Hello World!</alert>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="img/favicon.ico">
 </head>
-
 <body>
   <h1>HTML Rocks!</h1>
+
+  <ul>
+    <li>My name: Ryan Wensmann</li>
+    <li>Expected graduation: DEC 2025</li>
+    <li>Not currently working as a web developer</li>
+    <li>No previous web dev experience</li>
+  </ul>
+
+  <img src="Mewithfish.jpg" alt="Your Avatar" style="width:250px;height:250px;"> <hr>
   <p>
-    <button onclick="helloWorld()">Prints Hello World to the Developer console</button>
+    <button onclick="helloWorld()">display an alert dialog</button>
   </p>
   <hr>
   <form id="addForm">
@@ -25,22 +32,43 @@
     <br>
     <button type="submit">Add Numbers</button>
   </form>
+  <label id="result">Result:</label>
   <hr>
-  <ul>
-    <li>My Name is Ryan Wensmann</li>
-    <li>Expected Graduation: DEC 2025</li>
-    <li>No job doing web dev</li>
-    <li>No job or internship doing web dev before</li>
-  </ul>
-  <img src="img/Mewithfish.jpg" alt="Your Avatar" style="width:150px;height:150px;">
-  <hr>
-
   <button id="jokeButton">Get a Random Joke</button>
   <p id="joke"></p>
-
   <script type="module">
-    import {helloWorld, add, fetchRandomJoke} from './js/main.js';
+    import { helloWorld, add, fetchRandomJoke } from './js/main.js';
+
+    window.helloWorld = function() {
+      alert("alert");
+    };
+
+    const form = document.getElementById('addForm');
+    form.addEventListener('submit', function(e) {
+      e.preventDefault();
+      const num1 = parseFloat(document.getElementById('num1').value);
+      const num2 = parseFloat(document.getElementById('num2').value);
+      try {
+        const result = add(num1, num2);
+        document.getElementById('result').textContent = `Result: ${result}`;
+      } catch (e) {
+        console.error(e);
+        document.getElementById('result').textContent = `Error: ${e.message}`;
+      }
+    });
+
+    const jokebtn = document.getElementById('jokeButton');
+    const jokeresult = document.getElementById('joke');
+    jokebtn.addEventListener('click', async () => {
+      try {
+        jokeresult.textContent = 'Loading...';
+        const joke = await fetchRandomJoke();
+        document.getElementById('joke').textContent = joke;
+      } catch (e) {
+        console.error(e);
+        document.getElementById('joke').textContent = `Error: ${e.message}`;
+      }
+    });
   </script>
 </body>
-
 </html>
